k3s_cluster/base/public/glance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: public
  labels:
    app: public-glance
spec:
  type: ClusterIP
  selector:
    app: public-glance
  ports:
    - name: web
      protocol: TCP
      port: 9900 # port of that service
      targetPort: 8080 # port of the container
