k3s_cluster/base/public/glance/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: public
  labels:
    app: public-glance
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`glance.public.home`)
      middlewares:
       - name: public-middleware-basic-auth
      services:
        - name: glance-service
          port: 9900
  #tls: {}
